--- a/Jenkinsfile.yaml
+++ b/Jenkinsfile.yaml
@@ -47,9 +47,9 @@ pipeline {
                     rm api.yaml
                     mv test.yaml api.yaml
                     
-                    git add api.yaml
-                    git commit -m "Update app image tag to ${BUILD_NUMBER}"
-                    git push origin main
+                  #  git add api.yaml
+                  #  git commit -m "Update app image tag to ${BUILD_NUMBER}"
+                  #  git push origin main
                     
                 """
           }  
