--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
           dir('/home/heloise/.jenkins/workspace/wordsmith/api')
           {
               sh 'pwd'
-              sh 'docker build -t heloise1/wordsmithapi:$BUILD_NUMBER  --target test .'
+              sh 'docker build  --target test -t heloise1/wordsmithapi:$BUILD_NUMBER  .'
 		sh 'docker run -it --rm --name wordsmithtest heloise1/wordsmithapi:$BUILD_NUMBER'
           }
       }
