--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
           dir('/home/heloise/.jenkins/workspace/wordsmith/api')
           {
               sh 'pwd'
-              sh 'docker build --target build . -t heloise1/wordsmithapi:$BUILD_NUMBER'
+              sh 'docker build --target build --no-cache . -t heloise1/wordsmithapi:$BUILD_NUMBER'
 	      sh 'id=$(docker create heloise1/wordsmithapi:$BUILD_NUMBER)'
 	      sh 'echo $id'
           }
