--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -11,6 +11,12 @@ pipeline {
         {
             steps{
                 cleanWs()
+		     git(
+                   url:"https://github.com/heloise-viegas/wordsmith-replica.git",
+                   branch:"main"
+                  )
+
+ 
             }
         }
 
