--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,11 +3,14 @@ FROM --platform=${BUILDPLATFORM} maven:3-amazoncorretto-17 as build
 WORKDIR /home/lab
 
 COPY pom.xml .
-RUN mvn test
+
 #RUN mvn verify -DskipTests --fail-never
 
 COPY src ./src
 
+
+COPY test ./test
+RUN mvn test
 RUN mvn verify
 
 
