--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         {
             steps{
                 cleanWs()
-		     git(
+		          git(
                    url:"https://github.com/heloise-viegas/wordsmith-replica.git",
                    branch:"main"
                   )
@@ -61,7 +61,7 @@ pipeline {
                    
                     cat api.yaml | envsubst > test.yaml
                     
-                 
+                 sed -i "s,IMAGE_TAG,$BUILD_NUMBER," api.yaml
                     
                 """
           }  
