--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -61,7 +61,7 @@ pipeline {
                    
 
                     
-                   sed -i "s,IMAGE_TAG,$BUILD_NUMBER," api.yaml
+                   sed -i "s,IMAGE_TAG,$BUILD_NUMBER,g" api.yaml
                     
                 """
           }  
