--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
               sh """
                     git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
                     cd ./wordsmith-kubernetes-files/k8s-manifests
-	            tag=$(cat api.yaml | grep "image")
+	            tag=\$(cat api.yaml | grep "image")
 	      echo \$tag
 		     IFS=/ read -r var1 var2 <<< \$tag
                      IFS=: read -r var3 var4 <<< $var2
