--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -57,12 +57,12 @@ pipeline {
                     git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
                     cd ./wordsmith-kubernetes-files/k8s-manifests
 	            tag=\$(cat api.yaml | grep "image")
-	      echo \$tag
+	            echo \$tag
 		     IFS=/ read -r var1 var2 <<< \$tag
                      IFS=: read -r var3 var4 <<< $var2
 		    
                      echo $var2
-		     sed -i "s/\(image: .*:\)$var4/\1$BUILD_NUMBER/" api.yaml
+		     sed -i 's/\(image: .*:\)$var4/\1$BUILD_NUMBER/' api.yaml
                    cat api.yaml
                     
                 """
