--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -59,9 +59,9 @@ pipeline {
 	            tag=\$(cat api.yaml | grep "image")
 	            echo \$tag
 		     IFS=/ read -r var1 var2 <<< \$tag
-                     IFS=: read -r var3 var4 <<< $var2
+                     IFS=: read -r var3 var4 <<< \$var2
 		    
-                     echo $var2
+                     echo \$var2
 		  
                     
                 """
