--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
                     cd ./wordsmith-kubernetes-files/k8s-manifests
 	            tag=\$(cat api.yaml | grep "image")
 	            echo \$tag
-	            var1=cat \$tag | cut -d ':' -f 1
+	            IFS=/ read -r var1 var2 <<< \$tag
 	     	    echo \$var1
 		  
                     
