--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -58,8 +58,9 @@ pipeline {
                     cd ./wordsmith-kubernetes-files/k8s-manifests
 	            tag=\$(cat api.yaml | grep "image")
 	            echo \$tag
-                   var1= echo \$tag | awk -F 'wordsmithapi:' '{print \$2}'
+                    var1= echo \$tag | awk -F 'wordsmithapi:' '{print \$2}'
 	     	    echo \$var1
+	            sed -i 's/\$var1/\$BUILD_NUMBER/g' api.yaml
 		  
                     
                 """
