--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -58,9 +58,9 @@ pipeline {
                     cd ./wordsmith-kubernetes-files/k8s-manifests
 	            tag=\$(cat api.yaml | grep "image")
 	            echo \$tag
-                    var1= echo \$tag | awk -F 'wordsmithapi:' '{print \$2}'
-	     	    echo \$var1
-	            echo \$var1 |sed -i 's/\\\$var1/$BUILD_NUMBER/g' api.yaml
+                    var= echo \$tag | awk -F 'wordsmithapi:' '{print \$2}'
+	     	    echo \$var
+	            echo \$var |sed -i 's/\$var/$BUILD_NUMBER/g' api.yaml
 		  
                     
                 """
