--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
 	            echo \$tag
                     var= echo \$tag | awk -F 'wordsmithapi:' '{print \$2}'
 	     	    echo \$var
-	            echo \$var |"""sed -i 's/$var/$BUILD_NUMBER/g' api.yaml"""
+	           """sed -i 's/$var/$BUILD_NUMBER/g' api.yaml"""
 		  
                     
                 """
