--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -39,8 +39,8 @@ pipeline {
 	            echo \$tag
                     var= echo \$tag | awk -F 'wordsmithapi:' '{print \$2}'
 	     	    echo \$var
-	   $var='\$var'
-    echo \$var
+	   		var='\$var'
+    		   echo \$var
 	           echo sed -i 's/${var}/$BUILD_NUMBER/g' api.yaml
 	           echo sed -i 's|"\${var}"|$BUILD_NUMBER|g' api.yaml
 	    
