--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
       }
         post {
           success{
-              sh '''#!/bin/bash
+              sh """#!/bin/bash
                     git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
                     cd ./wordsmith-kubernetes-files/k8s-manifests
 
@@ -44,7 +44,7 @@ pipeline {
 	    
 		    cat api.yaml | grep "image"
                     
-                '''
+               """
           }  
             
    
