--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -47,8 +47,9 @@ pipeline {
                """
 		 script {
 			 dir('./wordsmith-kubernetes-files/k8s-manifestsy') {
-                    def myVariable = $(cat api.yaml | grep "image")
-                  
+                    def myVariable = sh(script: 'cat api.yaml | grep "image"', returnStdout: true).trim()
+				 
+                   myVariable = myVariable.replace("image", "Hi")
                     echo "The value of myVariable is: ${myVariable}"
 			 }
                 }
