--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -47,10 +47,11 @@ pipeline {
                """
 		 script {
 			 dir('./wordsmith-kubernetes-files/k8s-manifests') {
-                    def myVariable = sh(script: 'cat api.yaml | grep "image"', returnStdout: true).trim()
-				 
-                   myVariable = myVariable.replace("image", "Hi")
-                    echo "The value of myVariable is: ${myVariable}"
+                         def tag = sh(script: 'cat api.yaml | grep "image"', returnStdout: true).trim()
+			 def var = sh(script: 'echo ${tag} | awk -F 'wordsmithapi:' '{print \$2}'', returnStdout: true).trim()	 
+                         echo "The value of myVariable is: ${tag}"
+		         echo "The value of myVariable is: ${var}"
+		         tag = tag.replace("image", "Hi")
 			 }
                 }
           }  
