--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -48,13 +48,13 @@ pipeline {
 		 script {
 			 dir('./wordsmith-kubernetes-files/k8s-manifests') {
                          def tag = sh(script: 'cat api.yaml | grep "image"', returnStdout: true).trim()
-	 
-		         def delimiter = 'wordsmithapi:'
+	                 def delimiter = 'wordsmithapi:'
 		         def var = """echo '${tag}' | awk -F '${delimiter}' '{print \$2}'"""
-				 def processedContent = sh(script: var, returnStdout: true).trim()
+			 def processedContent = sh(script: var, returnStdout: true).trim()
                          echo "The value of myVariable is: ${tag}"
 		         echo "The value of processedContent is: ${processedContent}"
-		         tag = tag.replace("image", "Hi")
+		         processedContent = processedContent.replace( ${processedContent}, "Hi")
+				  echo "The value of new processedContent is: ${processedContent}"
 			 }
                 }
           }  
