--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -54,7 +54,16 @@ pipeline {
                          echo "The value of myVariable is: ${tag}"
 		         echo "The value of processedContent is: ${processedContent}"
 		         processedContent = processedContent.replace(processedContent, "Hi")
-				  echo "The value of new processedContent is: ${processedContent}"
+			echo "The value of new processedContent is: ${processedContent}"
+
+				 def fileContent = readFile(api.yaml).trim()
+
+                    // Replace the old value with the new value
+                    def updatedContent = fileContent.replace(processedContent, "newVal")
+
+                    // Write the updated content back to the file
+                    writeFile(file: api.yaml, text: updatedContent)
+				 
 			 }
                 }
           }  
