--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -53,8 +53,7 @@ pipeline {
 			 def processedContent = sh(script: var, returnStdout: true).trim()
                          echo "The value of myVariable is: ${tag}"
 		         echo "The value of processedContent is: ${processedContent}"
-		         processedContent = processedContent.replace(processedContent, "Hi")
-			echo "The value of new processedContent is: ${processedContent}"
+
 			 def filePath = './wordsmith-kubernetes-files/k8s-manifests/api.yaml'
 				 def fileContent = readFile(filePath).trim()
 
@@ -63,7 +62,10 @@ pipeline {
 
                     // Write the updated content back to the file
                     writeFile(file: filePath, text: updatedContent)
-				 
+				 // Print the updated content using cat
+                    def updatedFileContent = sh(script: "cat ${filePath}", returnStdout: true).trim()
+                    echo "Updated file content:"
+                    echo updatedFileContent
 			 
                 }
           }  
