--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -20,49 +20,61 @@ pipeline {
             }
         }
 
-
+				     stage('Test') {
+      steps {
+          dir('/home/heloise/.jenkins/workspace/wordsmith/api')
+          {
+              sh 'pwd'
+              sh 'docker build --target build --no-cache . -t heloise1/wordsmithapi:$BUILD_NUMBER'
+	      sh 'id=$(docker create heloise1/wordsmithapi:$BUILD_NUMBER)'
+	      sh 'echo $id'
+          }
+      }
+    }
+	    
+        stage('Build') {
+      steps {
+          dir('/home/heloise/.jenkins/workspace/wordsmith/api')
+          {
+              sh 'pwd'
+              sh 'docker build -t heloise1/wordsmithapi:$BUILD_NUMBER .'
+          }
+      }
+    }
+    stage('Login') {
+      steps {
+        sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
+      }
+    }
+	
 
     stage('Push') {
       steps {
-        sh 'docker pull heloise1/wordsmithapi'
+        sh 'docker push heloise1/wordsmithapi:$BUILD_NUMBER'
       }
         post {
           success{
               sh """#!/bin/bash
                     git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
-                    cd ./wordsmith-kubernetes-files/k8s-manifests
-
-             
-
-      
-	            tag=\$(cat api.yaml | grep "image")
-	            echo \$tag
-                    var=\$(echo \$tag | awk -F 'wordsmithapi:' '{print \$2}')
-	     	    echo \$var
-	           echo sed -i 's/\$var/$BUILD_NUMBER/g' api.yaml
-	           
-	    
-		    cat api.yaml | grep "image"
-                    
-               """
+		    """
+		  
 		 script {
 			 
-                         def tag = sh(script: 'cat ./wordsmith-kubernetes-files/k8s-manifests/api.yaml | grep "image"', returnStdout: true).trim()
+                         def image = sh(script: 'cat ./wordsmith-kubernetes-files/k8s-manifests/api.yaml | grep "image"', returnStdout: true).trim()
+			 echo "The value of image is: ${image}"
 	                 def delimiter = 'wordsmithapi:'
-		         def var = """echo '${tag}' | awk -F '${delimiter}' '{print \$2}'"""
-			 def processedContent = sh(script: var, returnStdout: true).trim()
-                         echo "The value of myVariable is: ${tag}"
-		         echo "The value of processedContent is: ${processedContent}"
+		         def oldTag = """echo '${image}' | awk -F '${delimiter}' '{print \$2}'"""
+			 def processedContent = sh(script: oldTag, returnStdout: true).trim()
+		         echo "The value of oldTag is: ${processedContent}"
 
 			 def filePath = './wordsmith-kubernetes-files/k8s-manifests/api.yaml'
-				 def fileContent = readFile(filePath).trim()
+			 def fileContent = readFile(filePath).trim()
 
                     // Replace the old value with the new value
-                    def updatedContent = fileContent.replace(processedContent, "newVal")
-
+                    def updatedContent = fileContent.replace(processedContent, env.BUILD_NUMBER)
                     // Write the updated content back to the file
                     writeFile(file: filePath, text: updatedContent)
-				 // Print the updated content using cat
+		    // Print the updated content using cat
                     def updatedFileContent = sh(script: "cat ${filePath}", returnStdout: true).trim()
                     echo "Updated file content:"
                     echo updatedFileContent
