--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -81,7 +81,10 @@ pipeline {
 			 
                 }
           }  
-            
+          always {
+      sh 'docker rmi heloise1/wordsmithapi:$BUILD_NUMBER'
+      sh 'docker logout'
+    }    
    
   }
     }
