--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -34,18 +34,32 @@ pipeline {
       }
         post {
           success{
-              sh """
+            sh """#!/bin/bash
                     git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
-                    cd ./wordsmith-kubernetes-files/k8s-manifests
-                    
-                    export IMAGE_TAG=$IMAGE_TAG
-                    envsubst  < web.yaml > testweb.yaml
-                    rm web.yaml
-                    mv testweb.yaml web.yaml
-                    
-                 
-                    
-                """
+		    """
+		  
+		 script {
+			 
+                         def image = sh(script: 'cat ./wordsmith-kubernetes-files/k8s-manifests/web.yaml | grep "image"', returnStdout: true).trim()
+			 echo "The value of image is: ${image}"
+	                 def delimiter = 'wordsmithapi:'
+		         def oldTag = """echo '${image}' | awk -F '${delimiter}' '{print \$2}'"""
+			 def processedContent = sh(script: oldTag, returnStdout: true).trim()
+		         echo "The value of oldTag is: ${processedContent}"
+
+			 def filePath = './wordsmith-kubernetes-files/k8s-manifests/web.yaml'
+			 def fileContent = readFile(filePath).trim()
+
+                    // Replace the old value with the new value
+                    def updatedContent = fileContent.replace(processedContent, env.BUILD_NUMBER)
+                    // Write the updated content back to the file
+                    writeFile(file: filePath, text: updatedContent)
+		    // Print the updated content using cat
+                    def updatedFileContent = sh(script: "cat ${filePath}", returnStdout: true).trim()
+                    echo "Updated file content:"
+                    echo updatedFileContent
+			 
+                }
           }  
             
     always {
