--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -54,12 +54,16 @@ pipeline {
       }
         post {
           success{
-              sh """#!/bin/bash
-                    git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
-		    """
+      //         sh """#!/bin/bash
+      //               git clone https://github.com/heloise-viegas/wordsmith-kubernetes-files.git
+		    // """
 		  
 		 script {
-			 
+			  // Define the repository URL and local directory
+	                def gitRepoURL = 'https://github.com/heloise-viegas/wordsmith-kubernetes-files.git'
+	                //def localDirectory = '/path/to/your/local/directory'
+	                // Clone the Git repository
+	                sh "git clone ${gitRepoURL}"
                          def image = sh(script: 'cat ./wordsmith-kubernetes-files/k8s-manifests/api.yaml | grep "image"', returnStdout: true).trim()
 			 echo "The value of image is: ${image}"
 	                 def delimiter = 'wordsmithapi:'
