--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
 
 			 // Define the repository URL and local directory
 	                def gitRepoURL = 'https://github.com/heloise-viegas/wordsmith-kubernetes-files.git'
-	                def localDirectory = '/path/to/your/local/directory'
+	                def localDirectory = './wordsmith-kubernetes-files/k8s-manifests'
 	                // Clone the Git repository
 	                sh "git clone ${gitRepoURL}"
 			 //${localDirectory}
@@ -64,6 +64,20 @@ pipeline {
                     def updatedFileContent = sh(script: "cat ${filePath}", returnStdout: true).trim()
                     echo "Updated file content:"
                     echo updatedFileContent
+		   
+		    // Stage and commit the changes
+                    sh "cd ${localDirectory} && git add web.yaml"
+                    sh "cd ${localDirectory} && git commit -m 'Image tag from Jenkins Pipeline'"   
+                    // Push the changes to the remote repository
+                   // sh "cd ${localDirectory} && git push origin main"
+			 withCredentials([gitUsernamePassword(credentialsId: 'hrv-jenkins-pipeline', gitToolName: 'Default')]) {
+                    sh "git push -u origin main"
+                }
+			 // sh "git add web.yaml"
+			 // sh "git commit -m 'Updated Image tag from Jenkins Pipeline'"
+			 //  withCredentials([gitUsernamePassword(credentialsId: 'hrv-jenkins-pipeline', gitToolName: 'Default')]) {
+    //                 sh "git push -u origin main"
+    //             }
 			 
                 }
           }  
@@ -77,20 +91,20 @@ pipeline {
   
         
         
-        stage('Connect to Minikube from Jenkins') {
-            steps {
-               withKubeConfig(caCertificate: '', clusterName: 'minikube', contextName: 'minikube', credentialsId: 'Minikube23Aug23', namespace: 'default', restrictKubeConfigAccess: false, serverUrl: 'https://127.0.0.1:32769') 
-               {
-                   echo "----------------------"
-                   sh 'kubectl get all'
-               }
-            }
-			post
-			{
-			    always{
-				echo "Success"
-			    }
-			}
-        }
+   //      stage('Connect to Minikube from Jenkins') {
+   //          steps {
+   //             withKubeConfig(caCertificate: '', clusterName: 'minikube', contextName: 'minikube', credentialsId: 'Minikube23Aug23', namespace: 'default', restrictKubeConfigAccess: false, serverUrl: 'https://127.0.0.1:32769') 
+   //             {
+   //                 echo "----------------------"
+   //                 sh 'kubectl get all'
+   //             }
+   //          }
+			// post
+			// {
+			//     always{
+			// 	echo "Success"
+			//     }
+			// }
+   //      }
     }
 }
