--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -71,7 +71,7 @@ pipeline {
                     // Push the changes to the remote repository
                    // sh "cd ${localDirectory} && git push origin main"
 			 withCredentials([gitUsernamePassword(credentialsId: 'hrv-jenkins-pipeline', gitToolName: 'Default')]) {
-                    sh "git push -u origin main"
+                    sh "git push https://github.com/heloise-viegas/wordsmith-kubernetes-files.git main"
                 }
 			 // sh "git add web.yaml"
 			 // sh "git commit -m 'Updated Image tag from Jenkins Pipeline'"
