--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -61,7 +61,7 @@ pipeline {
 		 script {
 			  // Define the repository URL and local directory
 	                def gitRepoURL = 'https://github.com/heloise-viegas/wordsmith-kubernetes-files.git'
-	                //def localDirectory = '/path/to/your/local/directory'
+	                def localDirectory = './wordsmith-kubernetes-files/k8s-manifests'
 	                // Clone the Git repository
 	                sh "git clone ${gitRepoURL}"
                          def image = sh(script: 'cat ./wordsmith-kubernetes-files/k8s-manifests/api.yaml | grep "image"', returnStdout: true).trim()
@@ -82,6 +82,16 @@ pipeline {
                     def updatedFileContent = sh(script: "cat ${filePath}", returnStdout: true).trim()
                     echo "Updated file content:"
                     echo updatedFileContent
+			  // Stage and commit the changes
+                    sh "cd ${localDirectory} && git add api.yaml"
+                    sh "cd ${localDirectory} && git commit -m 'Image tag from Jenkins Pipeline'"   
+                    // Push the changes to the remote repository
+                   // sh "cd ${localDirectory} && git push origin main"
+			 withCredentials([gitUsernamePassword(credentialsId: 'hrv-jenkins-pipeline', gitToolName: 'Default')]) {
+                    sh "cd ${localDirectory} && git push https://github.com/heloise-viegas/wordsmith-kubernetes-files.git main"
+		   //sh "cd ${localDirectory} && git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/your-username/your-repo.git master"
+                }
+			 
 			 
                 }
           }  
