--- a/api/Jenkinsfile
+++ b/api/Jenkinsfile
@@ -78,7 +78,7 @@ pipeline {
                         def updatedContent = fileContent.replace(oldTag, env.BUILD_NUMBER)
                         writeFile(file: filePath, text: updatedContent)
 
-                        def localDirectory = ${K8S_MANIFESTS_DIR}
+                        def localDirectory = K8S_MANIFESTS_DIR
                         sh "cd ${localDirectory} && git add api.yaml"
                         sh "cd ${localDirectory} && git commit -m 'Image tag from Jenkins Pipeline'"
                         sh "cd ${localDirectory} && git push ${GIT_REPO_URL} main"
