--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -79,7 +79,7 @@ pipeline {
                         writeFile(file: filePath, text: updatedContent)
 
                         def localDirectory = K8S_MANIFESTS_DIR
-                        sh "cd ${localDirectory} && git add api.yaml"
+                        sh "cd ${localDirectory} && git add web.yaml"
                         sh "cd ${localDirectory} && git commit -m 'Image tag from Jenkins Pipeline'"
                         sh "cd ${localDirectory} && git push ${GIT_REPO_URL} main"
                     }
